2001-07-07  Juan Pablo Mendoza <pablo_juan@yahoo.com>

	* gnobots.c
	* graphics.c: Vaya con dios imlib.

2001-07-05  Christian Rose  <menthos@menthos.com>

	* gnobots2.desktop: Modified Swedish entries.

2001-06-10  Juan Pablo Mendoza <pablo_juan@yahoo.com>

	* game.c : Apply patch from Matthew Sullivan <mattsull@iname.com>.
	  Bug #10664.

2001-06-09  Juan Pablo Mendoza <pablo_juan@yahoo.com>

	Fix bug #50786.

	* game.c (log_score): Use the same logic that in show_scores to
	  get the score name.
	* Makefile.am (install-data-local): Generate also the super-safe
	  score files and fix a typo in the generation of the -safe files.

2001-06-03  Juan Pablo Mendoza Mendoza <pablo_juan@yahoo.com>

	* gnobots.c (main): Don't try to free the gnome_master_client to
	  silent a gtk warning on exit.

2001-03-20 John Fleck <jfleck@swcp.com>

	* adding sgml version of docs - Makefiles still need to be done.
	
2000-05-12  Andreas Hyden  <a.hyden@cyberpoint.se>

	* gnobots.desktop: Added Swedish translation.

2000-04-22  Ian Peters  <itp@gnu.org>

	* gnobots.c: moved calls to push_[visual|colormap], added calls to
	  pop_[colormap|visual] -- these are for the drawing_area only, not for
	  everything.

1999-03-04  Ian Peters  <itp@acm.org>

	* keyboard.c: keyboard_cb: Commented out suspicious line checking
	keyboard modifiers, as this breaks some X setups with Numlock as
	modifier.  What was this for anyway?  Gtk+ can grab events fine
	regardless of what you do.

1999-02-21  Changwoo Ryu  <cwryu@adam.kaist.ac.kr>

	* properties.c, game.c: Marked more translatable strings with _().

1999-02-13  Ian Peters  <ipeters@acm.org>

	* Nothing was connected to delete_event, segfault on wm close.  Removed
	static from exit_cb and really_exit_cb in menu.c, and connected them up
	in gnobots.c, and now it works.

1999-01-26  Miguel de Icaza  <miguel@nuclecu.unam.mx>

	* gnobots.c (argv): Visual/Colormap fix.

	* menu.c: Kill file menu.
