@@ -1,3 +1,7 @@
+2001-07-12  Juan Pablo Mendoza <pablo_juan@yahoo.com>
+
+	* Makefile.am: Don't create a `echo' file.
+
 2001-07-07  Juan Pablo Mendoza <pablo_juan@yahoo.com>
 
 	* gnobots.c
